# bloodGlucosePrediciton

./: .gitignore  pyproject.toml  readme.md  requirements.txt  xgboost_results.txt
src/helper/: helper.py  preprocess.py
src/notebooks/: EDA.ipynb  imputation.ipynb  lstm.ipynb  lstm_regressor.pth  submission_output.csv  trial_0.csv  trial_14.csv  trial_21.csv  trial_23.csv
src/notebooks/optuna_results/: lstm_optimization_20241123_023527_results.json
tests/: test_float_time_minus.py  test_float_time_range.py  test_float_to_time.py  test_time_to_float.py
